--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,11 +7,6 @@
 @import url('./reset.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
 
@@ -27,11 +22,13 @@
 }
 
 body {
-  font-family: Montserrat;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 400;
   line-height: 24px;
+  font-weight: 400;
+  font-family: Montserrat;
   letter-spacing: 0.04em;
+
   text-align: left;
   display: flex;
   margin: 0 auto;
@@ -58,6 +55,13 @@ body {
   position: relative;
 }
 #searchImg {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  font-family: Montserrat;
+  letter-spacing: 0.04em;
+
   height: 40px;
   width: 272px;
   border-radius: 4px;
@@ -75,14 +79,20 @@ body {
 }
 
 button {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: Montserrat;
+  font-weight: 500;
+  color: #ffffff;
+  letter-spacing: 0.04em;
+
   height: 40px;
   width: 91px;
   border-radius: 4px;
   padding: 8px 16px;
   border-radius: 8px;
   background-color: #4e75ff;
-  color: #ffffff;
-  font-weight: 500;
   text-align: center;
   border: none;
 }
@@ -107,7 +117,7 @@ button:hover {
   height: fit-content;
   position: relative;
   border: 1px solid #808080;
-  border-width: 0px 1px 1px 1px;
+  border-width: 1px 1px 1px 1px;
   box-sizing: border-box;
 }
 
@@ -129,9 +139,13 @@ button:hover {
   font-size: 12px;
   line-height: 16px;
 }
-#moreBtn{
+#moreBtn {
   display: none;
   margin: 0 auto;
+  margin-top: 32px;
+  width: 125px;
+  align-items: center;
+  justify-content: center;
 }
 
 .loader {
@@ -142,9 +156,10 @@ button:hover {
   font-weight: bold;
   color: #263238;
   box-sizing: border-box;
-  text-shadow: 0 0 2px #FFF, 0 0 1px #FFF, 0 0 1px #FFF;
+  text-shadow: 0 0 2px #fff, 0 0 1px #fff, 0 0 1px #fff;
   letter-spacing: 2px;
   left: 50%;
+  transform: translateX(-50%);
 }
 .loader::after {
   content: 'Loading';
